<resources>
    <string name="app_name">FootSenegal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Parametres</string>

    <string name="connection">connexion</string>
    <string name="login">Login</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Connect</string>
    <string name="sign_in">Se connecter</string>
    <string name="help">Aide</string>
    <string name="cancel">Annuler</string>
    <string name="save">Sauvegarder</string>
    <string name="error_fields">Error Fields</string>
    <string name="error_parameters">Error Parameters</string>
    <string name="error_connection">Connection Error</string>
    <string name="welcome">Welcome</string>
    <string name="wait">Wait</string>
    <string name="success_save">Success Save"</string>
    <string name="text_foot">
        FootGalsen vous offre la possibilité d\'avoir tous les résultats et le calendrier des matchs de ligue 1 et de ligue 2 sans oublier les infos sur les lieux de rendez-vous !!
    </string>
    <string name="text_help"> pour............</string>
    <string name="teams">Equipes</string>
    <string name="goal">Butes</string>
    <string name="ranking">Ranking</string>
    <string name="rank">Rang</string>
    <string name="ticket"> Billet</string>
    <string name="price"> Prix</string>
    <string name="stadium"> Stade</string>
    <string name="players"> Players List</string>
    <string name="categories">Category</string>
    <string name="content_description_media">Foot Image</string>

    <string name="menu_home">Home</string>
    <string name="menu_ligue1">Ligue 1</string>
    <string name="menu_ligue2">Ligue 2</string>
    <string name="menu_help">Aide</string>
    <string name="teams_list">Liste des equipes</string>
    <string name="list_match">Liste des matchs</string>
    <string name="list_result">Resultata</string>
    <string name="liste_des_equipes">Liste des equipes</string>
    <string name="versus">VS</string>
    <string name="lieu">Stade</string>
    <string name="date">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>