<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ligue1"
            android:icon="@drawable/ic_menu_ligue"
            android:title="@string/menu_ligue1" />

        <item
            android:id="@+id/nav_ligue2"
            android:icon="@drawable/ic_menu_ligue"
            android:title="@string/menu_ligue2" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
    </group>
</menu>