<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.footsenegal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_ligue1"
        android:label="@string/menu_ligue1"
        android:name="com.example.footsenegal.ui.ligue.LigueFragment"
        tools:layout="@layout/fragment_ligue" />

    <fragment
        android:id="@+id/nav_ligue2"
        android:label="@string/menu_ligue2"
        android:name="com.example.footsenegal.ui.ligue2.Ligue2Fragment"
        tools:layout="@layout/fragment_ligue" />

    <fragment
        android:id="@+id/nav_help"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
</navigation>